--- a/values.yaml
+++ b/values.yaml
@@ -1,52 +1,7 @@
-# Default values for komiser.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-replicaCount: 1
-role: ""
-
 image:
   repository: mlabouardy/komiser
-  tag: 2.5.0
+  tag: 2.8.0
   pullPolicy: IfNotPresent
 
 aws:
-  region: "eu-west-1"
-
-nameOverride: ""
-fullnameOverride: ""
-
-service:
-  type: ClusterIP
-  port: 3000
-
-ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  path: /
-  hosts:
-    - komiser.organization.com
-  tls: []
-  #  - secretName: komiser-tls
-  #    hosts:
-  #      - komiser.organization.com
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 250m
-  #  memory: 256Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+  region: "us-east-1"
