--- a/templates/service-account.yaml
+++ b/templates/service-account.yaml
@@ -3,4 +3,5 @@ kind: ServiceAccount
 metadata:
   name: komiser
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::ACCOUNT_ID:role/ROLE_NAME
+    eks.amazonaws.com/role-arn: arn:aws:iam::602887012891:role/AWSEKSKomiserRole
+    #eks.amazonaws.com/role-arn: arn:aws:iam::890753381703:role/komiserRole
