added service comment

--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -7,6 +7,6 @@ spec:
     - name: http
       port: 80
       targetPort: 3000
-  type: LoadBalancer
+  type: LoadBalancer    # If deploying to production, Service type LoadBalancer is not recommended. Choose either ClusterIP or NodePort (not internet facing)
   selector:
     app: komiser
