--- a/templates/service-account.yaml
+++ b/templates/service-account.yaml
@@ -3,4 +3,4 @@ kind: ServiceAccount
 metadata:
   name: komiser
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::602887012891:role/komiser-multiple-cloud-account-demo
+    eks.amazonaws.com/role-arn: arn:aws:iam::890753381703:role/komiser-role-test
