add namespace line and ARN line

--- a/templates/service-account.yaml
+++ b/templates/service-account.yaml
@@ -3,4 +3,4 @@ kind: ServiceAccount
 metadata:
   name: komiser
   annotations:
-    eks.amazonaws.com/role-arn: 
+    eks.amazonaws.com/role-arn: <IAM-ROLE-ARN>
