--- a/templates/pv.yaml
+++ b/templates/pv.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: komiser-pv
+  namespace: testing-komiser
 spec:
   capacity:
     storage: 5Gi
