change default region and added Jake as maintainer

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -7,3 +7,5 @@ appVersion: 3.0.0
 maintainers:
     - name: Mohamed Labouardy
       email: mohamed@tailwarden.com
+    - name: Jake Page
+      email: jake@tailwarden.com
