--- a/templates/configmap-credentials.yaml
+++ b/templates/configmap-credentials.yaml
@@ -6,5 +6,5 @@ data:
   credentials.yaml: |-
     [default]
     region = eu-central-1
-    aws_access_key_id = 
-    aws_secret_access_key = 
+    aws_access_key_id = YOUR-ACCESS-KEY-ID
+    aws_secret_access_key = YOUR-SECRET-ACCESS-KEY
